@@ -1,5 +1,9 @@
 2022-05-07  Ulrich Müller  <ulm@gentoo.org>
 
+	* ebuild-mode.el (ebuild-mode-get-keywords): Restore trivial
+	compatibility code, allowing continued support for XEmacs 21.4.
+	This reverts the change of 2022-04-28.
+
 	* ebuild-mode-keywords.el (ebuild-mode-keywords): Provide feature.
 	* ebuild-mode.el (ebuild-mode-keywords): Require it.
 
